--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -4061,6 +4061,50 @@
     "icon": "info"
   },
   {
+    "section": "popoutAnimationSpeed",
+    "label": "%1 Animation Speed",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "custom",
+      "duration",
+      "fonts",
+      "motion",
+      "popout",
+      "speed",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "icon": "open_in_new",
+    "description": "%1 custom animation duration"
+  },
+  {
+    "section": "modalAnimationSpeed",
+    "label": "%1 Animation Speed",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "custom",
+      "duration",
+      "fonts",
+      "modal",
+      "motion",
+      "speed",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "icon": "web_asset",
+    "description": "%1 custom animation duration"
+  },
+  {
     "section": "animationSpeed",
     "label": "Animation Speed",
     "tabIndex": 14,
@@ -4107,6 +4151,48 @@
       "typography"
     ],
     "description": "Fine-tune animation timing in milliseconds"
+  },
+  {
+    "section": "popoutCustomAnimationDuration",
+    "label": "Custom Duration",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "custom",
+      "duration",
+      "fonts",
+      "motion",
+      "popout",
+      "speed",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "description": "%1 custom animation duration"
+  },
+  {
+    "section": "modalCustomAnimationDuration",
+    "label": "Custom Duration",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "custom",
+      "duration",
+      "fonts",
+      "modal",
+      "motion",
+      "speed",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "description": "%1 custom animation duration"
   },
   {
     "section": "fontScale",
@@ -4943,29 +5029,6 @@
     ],
     "icon": "apps",
     "conditionKey": "isHyprlandOrNiri"
-  },
-  {
-    "section": "runningApps",
-    "label": "Running Apps Settings",
-    "tabIndex": 19,
-    "category": "Running Apps",
-    "keywords": [
-      "active",
-      "apps",
-      "current",
-      "desktop",
-      "open",
-      "running",
-      "settings",
-      "show",
-      "taskbar",
-      "tasks",
-      "virtual",
-      "windows",
-      "workspace"
-    ],
-    "icon": "apps",
-    "description": "Show only apps running in current workspace"
   },
   {
     "section": "_tab_20",
