--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -1,5 +1,12 @@
 [
   {
+    "term": "%1 Animation Speed",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "%1 DMS bind(s) may be overridden by config binds that come after the include.",
     "translation": "",
     "context": "",
@@ -29,6 +36,13 @@
   },
   {
     "term": "%1 connected",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "%1 custom animation duration",
     "translation": "",
     "context": "",
     "reference": "",
@@ -462,6 +476,13 @@
     "comment": ""
   },
   {
+    "term": "Active Color",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Active Lock Screen Monitor",
     "translation": "",
     "context": "",
@@ -847,6 +868,13 @@
     "comment": ""
   },
   {
+    "term": "Apps Dock Settings",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Apps Icon",
     "translation": "",
     "context": "",
@@ -939,6 +967,13 @@
   },
   {
     "term": "Audio Visualizer",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Audio system restarted",
     "translation": "",
     "context": "",
     "reference": "",
@@ -1589,6 +1624,13 @@
     "comment": ""
   },
   {
+    "term": "Button Color",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "CPU",
     "translation": "",
     "context": "",
@@ -2002,13 +2044,6 @@
     "comment": ""
   },
   {
-    "term": "Click + to add a rule for the focused window",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Click Import to add a .ovpn or .conf",
     "translation": "",
     "context": "",
@@ -2198,6 +2233,13 @@
     "comment": ""
   },
   {
+    "term": "Color for primary action buttons",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Color temperature for day time",
     "translation": "",
     "context": "",
@@ -2241,6 +2283,13 @@
   },
   {
     "term": "Colorful mix of bright contrasting accents.",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Colorize Active",
     "translation": "",
     "context": "",
     "reference": "",
@@ -2494,7 +2543,7 @@
   {
     "term": "Connected",
     "translation": "",
-    "context": "KDE Connect connected status | network status",
+    "context": "network status",
     "reference": "",
     "comment": ""
   },
@@ -2793,6 +2842,13 @@
     "comment": ""
   },
   {
+    "term": "Current Monitor",
+    "translation": "",
+    "context": "Running apps filter: only show apps from the same monitor",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Current Period",
     "translation": "",
     "context": "",
@@ -2824,6 +2880,13 @@
     "term": "Current Weather",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Current Workspace",
+    "translation": "",
+    "context": "Running apps filter: only show apps from the active workspace",
     "reference": "",
     "comment": ""
   },
@@ -2922,6 +2985,13 @@
     "term": "Custom Logout Command",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Custom Name",
+    "translation": "",
+    "context": "Audio device rename dialog field label",
     "reference": "",
     "comment": ""
   },
@@ -3339,6 +3409,13 @@
     "comment": ""
   },
   {
+    "term": "Device names updated",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Device paired",
     "translation": "",
     "context": "Phone Connect pairing action",
@@ -3717,7 +3794,21 @@
     "comment": ""
   },
   {
+    "term": "Drag to Reorder",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Drag workspace indicators to reorder them",
     "translation": "",
     "context": "",
     "reference": "",
@@ -3941,6 +4032,20 @@
     "comment": ""
   },
   {
+    "term": "Enlarge on Hover",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Enlargement %",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Enter 6-digit passkey",
     "translation": "",
     "context": "",
@@ -3993,6 +4098,13 @@
     "term": "Enter custom top bar format (e.g., ddd MMM d)",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Enter device name...",
+    "translation": "",
+    "context": "Audio device rename dialog placeholder",
     "reference": "",
     "comment": ""
   },
@@ -4473,6 +4585,13 @@
     "comment": ""
   },
   {
+    "term": "Failed to restart audio system",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Failed to restart job",
     "translation": "",
     "context": "",
@@ -4490,6 +4609,13 @@
     "term": "Failed to ring device",
     "translation": "",
     "context": "Phone Connect error",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Failed to save audio config",
+    "translation": "",
+    "context": "",
     "reference": "",
     "comment": ""
   },
@@ -5397,6 +5523,13 @@
     "comment": ""
   },
   {
+    "term": "Hide Indicators",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Hide Updater Widget",
     "translation": "",
     "context": "When updater widget is used, then hide it if no update found",
@@ -5628,6 +5761,13 @@
     "comment": ""
   },
   {
+    "term": "Icon Size %",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Icon Theme",
     "translation": "",
     "context": "",
@@ -5762,6 +5902,13 @@
   },
   {
     "term": "Inherit",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Inhibitable",
     "translation": "",
     "context": "",
     "reference": "",
@@ -6902,6 +7049,13 @@
     "comment": ""
   },
   {
+    "term": "Modals",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Mode",
     "translation": "",
     "context": "",
@@ -7567,6 +7721,13 @@
     "comment": ""
   },
   {
+    "term": "No input devices found",
+    "translation": "",
+    "context": "Audio settings empty state",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "No items added yet",
     "translation": "",
     "context": "",
@@ -7619,6 +7780,13 @@
     "term": "No output device",
     "translation": "",
     "context": "audio status",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "No output devices found",
+    "translation": "",
+    "context": "Audio settings empty state",
     "reference": "",
     "comment": ""
   },
@@ -8064,6 +8232,13 @@
     "comment": ""
   },
   {
+    "term": "Open a new note",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Open folder",
     "translation": "",
     "context": "",
@@ -8148,6 +8323,13 @@
     "comment": ""
   },
   {
+    "term": "Original: %1",
+    "translation": "",
+    "context": "Shows the original device name before renaming",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Other",
     "translation": "",
     "context": "",
@@ -8179,6 +8361,13 @@
     "term": "Output Area Full",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Output Devices",
+    "translation": "",
+    "context": "Audio settings: speaker/headphone devices",
     "reference": "",
     "comment": ""
   },
@@ -8673,6 +8862,13 @@
     "comment": ""
   },
   {
+    "term": "Popouts",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Popup Position",
     "translation": "",
     "context": "",
@@ -8841,6 +9037,13 @@
     "comment": ""
   },
   {
+    "term": "Press Enter and the audio system will restart to apply the change",
+    "translation": "",
+    "context": "Audio device rename dialog hint",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Press key...",
     "translation": "",
     "context": "",
@@ -8871,14 +9074,14 @@
   {
     "term": "Primary",
     "translation": "",
-    "context": "color option | primary color | tile color option",
+    "context": "button color option | color option | primary color | tile color option",
     "reference": "",
     "comment": ""
   },
   {
     "term": "Primary Container",
     "translation": "",
-    "context": "tile color option",
+    "context": "button color option | tile color option",
     "reference": "",
     "comment": ""
   },
@@ -9179,7 +9382,7 @@
   {
     "term": "Refresh",
     "translation": "",
-    "context": "KDE Connect refresh button | Phone Connect refresh tooltip",
+    "context": "Phone Connect refresh tooltip",
     "reference": "",
     "comment": ""
   },
@@ -9338,6 +9541,13 @@
     "comment": ""
   },
   {
+    "term": "Reset to default name",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Resize Widget",
     "translation": "",
     "context": "",
@@ -9369,6 +9579,13 @@
     "term": "Restart the DankMaterialShell",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Restarting audio system...",
+    "translation": "",
+    "context": "Loading overlay while WirePlumber restarts",
     "reference": "",
     "comment": ""
   },
@@ -9555,13 +9772,6 @@
     "comment": ""
   },
   {
-    "term": "Running Apps Only In Current Workspace",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Running Apps Settings",
     "translation": "",
     "context": "",
@@ -9654,6 +9864,13 @@
   },
   {
     "term": "Saved Configurations",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Saved Note",
     "translation": "",
     "context": "",
     "reference": "",
@@ -9872,7 +10089,7 @@
   {
     "term": "Secondary",
     "translation": "",
-    "context": "color option | secondary color | tile color option",
+    "context": "button color option | color option | secondary color | tile color option",
     "reference": "",
     "comment": ""
   },
@@ -10146,6 +10363,34 @@
     "term": "Server",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Set Custom Device Name",
+    "translation": "",
+    "context": "Audio device rename dialog title",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Set custom name",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Set custom names for your audio input devices",
+    "translation": "",
+    "context": "Audio settings description",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Set custom names for your audio output devices",
+    "translation": "",
+    "context": "Audio settings description",
     "reference": "",
     "comment": ""
   },
@@ -10549,6 +10794,13 @@
     "comment": ""
   },
   {
+    "term": "Show Saved Items",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Show Seconds",
     "translation": "",
     "context": "",
@@ -10773,13 +11025,6 @@
     "comment": ""
   },
   {
-    "term": "Show only apps running in current workspace",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Show weather information in top bar and control center",
     "translation": "",
     "context": "",
@@ -10888,6 +11133,13 @@
     "term": "Skip",
     "translation": "",
     "context": "greeter skip button",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Skip confirmation",
+    "translation": "",
+    "context": "",
     "reference": "",
     "comment": ""
   },
@@ -11153,7 +11405,7 @@
   {
     "term": "Surface Variant",
     "translation": "",
-    "context": "tile color option",
+    "context": "button color option | tile color option",
     "reference": "",
     "comment": ""
   },
@@ -11462,6 +11714,13 @@
     "term": "This bind is overridden by config.kdl",
     "translation": "",
     "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "This may take a few seconds",
+    "translation": "",
+    "context": "Loading overlay subtitle",
     "reference": "",
     "comment": ""
   },
@@ -12460,6 +12719,13 @@
     "comment": ""
   },
   {
+    "term": "Visual Effects",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Visual divider between widgets",
     "translation": "",
     "context": "",
@@ -12608,6 +12874,13 @@
   },
   {
     "term": "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "When locked",
     "translation": "",
     "context": "",
     "reference": "",
@@ -13098,6 +13371,13 @@
   },
   {
     "term": "events",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "featured",
     "translation": "",
     "context": "",
     "reference": "",
