--- a/quickshell/translations/poexports/he.json
+++ b/quickshell/translations/poexports/he.json
@@ -1,4 +1,7 @@
 {
+  "%1 Animation Speed": {
+    "%1 Animation Speed": ""
+  },
   "%1 DMS bind(s) may be overridden by config binds that come after the include.": {
     "%1 DMS bind(s) may be overridden by config binds that come after the include.": "%1 קיצורי DMS עשויים להידרס על ידי קיצורי config שמגיעים אחרי ה-include."
   },
@@ -13,6 +16,9 @@
   },
   "%1 connected": {
     "%1 connected": "%1 מחובר/ים"
+  },
+  "%1 custom animation duration": {
+    "%1 custom animation duration": ""
   },
   "%1 days ago": {
     "%1 days ago": "לפני %1 ימים"
@@ -185,6 +191,9 @@
   "Active": {
     "Active": "פעיל"
   },
+  "Active Color": {
+    "Active Color": ""
+  },
   "Active Lock Screen Monitor": {
     "Active Lock Screen Monitor": "המסך הפעיל שבו מוצג מסך הנעילה"
   },
@@ -329,6 +338,9 @@
   "Apps Dock": {
     "Apps Dock": ""
   },
+  "Apps Dock Settings": {
+    "Apps Dock Settings": ""
+  },
   "Apps Icon": {
     "Apps Icon": "סמל אפליקציות"
   },
@@ -367,6 +379,32 @@
   },
   "Audio Visualizer": {
     "Audio Visualizer": "מחולל חזותי לשמע"
+  },
+  "Audio device rename dialog field label": {
+    "Custom Name": ""
+  },
+  "Audio device rename dialog hint": {
+    "Press Enter and the audio system will restart to apply the change": ""
+  },
+  "Audio device rename dialog placeholder": {
+    "Enter device name...": ""
+  },
+  "Audio device rename dialog title": {
+    "Set Custom Device Name": ""
+  },
+  "Audio settings description": {
+    "Set custom names for your audio input devices": "",
+    "Set custom names for your audio output devices": ""
+  },
+  "Audio settings empty state": {
+    "No input devices found": "",
+    "No output devices found": ""
+  },
+  "Audio settings: speaker/headphone devices": {
+    "Output Devices": ""
+  },
+  "Audio system restarted": {
+    "Audio system restarted": ""
   },
   "Audio volume control": {
     "Audio volume control": "בקרת עוצמת שמע"
@@ -623,6 +661,9 @@
   "Browse or search plugins": {
     "Browse or search plugins": ""
   },
+  "Button Color": {
+    "Button Color": ""
+  },
   "CPU": {
     "CPU": "CPU"
   },
@@ -875,6 +916,9 @@
   "Color displayed on monitors without the lock screen": {
     "Color displayed on monitors without the lock screen": "הצבע שמוצג על מסכים שלא מציגים את מסך הנעילה"
   },
+  "Color for primary action buttons": {
+    "Color for primary action buttons": ""
+  },
   "Color temperature for day time": {
     "Color temperature for day time": "טמפרטורת צבע לשעות היום"
   },
@@ -889,6 +933,9 @@
   },
   "Colorful mix of bright contrasting accents.": {
     "Colorful mix of bright contrasting accents.": "שילוב צבעוני של דגשים מנוגדים ובהירים."
+  },
+  "Colorize Active": {
+    "Colorize Active": ""
   },
   "Column": {
     "Column": "עמודה"
@@ -1322,6 +1369,9 @@
   "Device connections": {
     "Device connections": "חיבורי התקנים"
   },
+  "Device names updated": {
+    "Device names updated": ""
+  },
   "Device paired": {
     "Device paired": "ההתקן צומד"
   },
@@ -1472,8 +1522,14 @@
   "Door Open": {
     "Door Open": "דלת פתוחה"
   },
+  "Drag to Reorder": {
+    "Drag to Reorder": ""
+  },
   "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.": {
     "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.": "גרור/גררי ווידג׳טים כדי לשנות את סדרם בתוך מקטעים. השתמש/י בסמל העין כדי להסתיר/להציג ווידג׳טים (שומר על המרווח), או בX כדי להסיר אותם לחלוטין."
+  },
+  "Drag workspace indicators to reorder them": {
+    "Drag workspace indicators to reorder them": ""
   },
   "Driver": {
     "Driver": "מנהל התקן"
@@ -1582,6 +1638,12 @@
   },
   "End": {
     "End": "סוף"
+  },
+  "Enlarge on Hover": {
+    "Enlarge on Hover": ""
+  },
+  "Enlargement %": {
+    "Enlargement %": ""
   },
   "Enter 6-digit passkey": {
     "Enter 6-digit passkey": "הזן/י מפתח גישה בן 6 ספרות"
@@ -1781,11 +1843,17 @@
   "Failed to remove printer from class": {
     "Failed to remove printer from class": "הסרת המדפסת מהסוג נכשלה"
   },
+  "Failed to restart audio system": {
+    "Failed to restart audio system": ""
+  },
   "Failed to restart job": {
     "Failed to restart job": "הפעלת העבודה מחדש נכשלה"
   },
   "Failed to resume printer": {
     "Failed to resume printer": "המשך פעולת המדפסת נכשל"
+  },
+  "Failed to save audio config": {
+    "Failed to save audio config": ""
   },
   "Failed to save clipboard setting": {
     "Failed to save clipboard setting": "שמירת ההגדרה של לוח ההעתקה נכשלה"
@@ -2105,6 +2173,9 @@
   "Hide Delay": {
     "Hide Delay": "עיכוב הסתרה"
   },
+  "Hide Indicators": {
+    "Hide Indicators": ""
+  },
   "Hide When Typing": {
     "Hide When Typing": "הסתר/י בעת הקלדה"
   },
@@ -2192,6 +2263,9 @@
   "Icon Size": {
     "Icon Size": "גודל סמל"
   },
+  "Icon Size %": {
+    "Icon Size %": ""
+  },
   "Icon Theme": {
     "Icon Theme": "ערכת נושא של סמלים"
   },
@@ -2248,6 +2322,9 @@
   },
   "Inherit": {
     "Inherit": "קבל/י בירושה"
+  },
+  "Inhibitable": {
+    "Inhibitable": ""
   },
   "Input Devices": {
     "Input Devices": "התקני קלט"
@@ -2602,6 +2679,12 @@
   "Loading keybinds...": {
     "Loading keybinds...": "טוען קיצורי מקלדת..."
   },
+  "Loading overlay subtitle": {
+    "This may take a few seconds": ""
+  },
+  "Loading overlay while WirePlumber restarts": {
+    "Restarting audio system...": ""
+  },
   "Loading plugins...": {
     "Loading plugins...": "טוען תוספים..."
   },
@@ -2862,6 +2945,9 @@
   },
   "Modal Background": {
     "Modal Background": "רקע מודל"
+  },
+  "Modals": {
+    "Modals": ""
   },
   "Mode": {
     "Mode": "מצב"
@@ -3259,6 +3345,9 @@
   "Open Notepad File": {
     "Open Notepad File": "פתח/י קובץ בפנקס"
   },
+  "Open a new note": {
+    "Open a new note": ""
+  },
   "Open folder": {
     "Open folder": ""
   },
@@ -3447,6 +3536,9 @@
   "Phone Connect ping action": {
     "Ping sent to": ""
   },
+  "Phone Connect refresh tooltip": {
+    "Refresh": ""
+  },
   "Phone Connect service unavailable message": {
     "Phone Connect unavailable": ""
   },
@@ -3521,6 +3613,9 @@
   },
   "Pointer": {
     "Pointer": "מצביע"
+  },
+  "Popouts": {
+    "Popouts": ""
   },
   "Popup Position": {
     "Popup Position": "מיקום חלונית קופצת"
@@ -3768,6 +3863,9 @@
   "Reset Size": {
     "Reset Size": "אפס/י גודל"
   },
+  "Reset to default name": {
+    "Reset to default name": ""
+  },
   "Resize Widget": {
     "Resize Widget": "שנה/י גודל ווידג׳ט"
   },
@@ -3852,6 +3950,12 @@
   "Running Apps Settings": {
     "Running Apps Settings": "הגדרות אפליקציות פעילות"
   },
+  "Running apps filter: only show apps from the active workspace": {
+    "Current Workspace": ""
+  },
+  "Running apps filter: only show apps from the same monitor": {
+    "Current Monitor": ""
+  },
   "SDR Brightness": {
     "SDR Brightness": "בהירות של SDR"
   },
@@ -3875,6 +3979,9 @@
   },
   "Saved Configurations": {
     "Saved Configurations": "תצורות שמורות"
+  },
+  "Saved Note": {
+    "Saved Note": ""
   },
   "Saved item deleted": {
     "Saved item deleted": ""
@@ -4050,6 +4157,9 @@
   "Server": {
     "Server": "שרת"
   },
+  "Set custom name": {
+    "Set custom name": ""
+  },
   "Set different wallpapers for each connected monitor": {
     "Set different wallpapers for each connected monitor": "הגדר/י רקעים שונים לכל מסך מחובר"
   },
@@ -4185,6 +4295,9 @@
   "Show Restart DMS": {
     "Show Restart DMS": "הצג/י הפעלה מחדש של DMS"
   },
+  "Show Saved Items": {
+    "Show Saved Items": ""
+  },
   "Show Seconds": {
     "Show Seconds": "הצג/י שניות"
   },
@@ -4296,6 +4409,9 @@
   "Shows current workspace and allows switching": {
     "Shows current workspace and allows switching": "מציג את סביבת העבודה הנוכחית ומאפשר להחליף סביבה"
   },
+  "Shows the original device name before renaming": {
+    "Original: %1": ""
+  },
   "Shows when caps lock is active": {
     "Shows when caps lock is active": "מוצג כאשר Caps Lock פעיל"
   },
@@ -4322,6 +4438,9 @@
   },
   "Sizing": {
     "Sizing": "גודל"
+  },
+  "Skip confirmation": {
+    "Skip confirmation": ""
   },
   "Small": {
     "Small": ""
@@ -4938,6 +5057,9 @@
   "Visibility": {
     "Visibility": "ראות"
   },
+  "Visual Effects": {
+    "Visual Effects": ""
+  },
   "Visual divider between widgets": {
     "Visual divider between widgets": "מפריד חזותי בין ווידג׳טים"
   },
@@ -4985,6 +5107,9 @@
   },
   "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": {
     "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": "כאשר האפשרות פעילה, האפליקציות ממוינות לפי סדר אלפביתי. כאשר היא כבויה, האפליקציות ממוינות לפי תדירות השימוש."
+  },
+  "When locked": {
+    "When locked": ""
   },
   "When updater widget is used, then hide it if no update found": {
     "Hide Updater Widget": "הסתר/י את הווידג׳ט של מעדכן המערכת",
@@ -5198,6 +5323,16 @@
   "browse themes button | theme browser header | theme browser window title": {
     "Browse Themes": "עיין/י בערכות נושא"
   },
+  "button color option | color option | primary color | tile color option": {
+    "Primary": ""
+  },
+  "button color option | color option | secondary color | tile color option": {
+    "Secondary": ""
+  },
+  "button color option | tile color option": {
+    "Primary Container": "",
+    "Surface Variant": ""
+  },
   "catppuccin theme description": {
     "Soothing pastel theme based on Catppuccin": "ערכת נושא מרגיעה עם צבעי פסטל שמבוססת על Catppuccin"
   },
@@ -5318,6 +5453,9 @@
   },
   "fallback gpu name": {
     "Unknown GPU": ""
+  },
+  "featured": {
+    "featured": ""
   },
   "files": {
     "files": "קבצים"
@@ -5561,6 +5699,7 @@
     "nav": ""
   },
   "network status": {
+    "Connected": "",
     "Disabling WiFi...": "",
     "Enabling WiFi...": "",
     "Ethernet": "",
