--- a/quickshell/translations/poexports/zh_CN.json
+++ b/quickshell/translations/poexports/zh_CN.json
@@ -1,4 +1,7 @@
 {
+  "%1 Animation Speed": {
+    "%1 Animation Speed": ""
+  },
   "%1 DMS bind(s) may be overridden by config binds that come after the include.": {
     "%1 DMS bind(s) may be overridden by config binds that come after the include.": "%1 个 DMS 绑定可能会被包含后出现的配置绑定覆盖。"
   },
@@ -13,6 +16,9 @@
   },
   "%1 connected": {
     "%1 connected": "已连接 %1"
+  },
+  "%1 custom animation duration": {
+    "%1 custom animation duration": ""
   },
   "%1 days ago": {
     "%1 days ago": "%1天之前"
@@ -185,6 +191,9 @@
   "Active": {
     "Active": "活动"
   },
+  "Active Color": {
+    "Active Color": ""
+  },
   "Active Lock Screen Monitor": {
     "Active Lock Screen Monitor": "活动锁屏显示器"
   },
@@ -329,6 +338,9 @@
   "Apps Dock": {
     "Apps Dock": "程序坞"
   },
+  "Apps Dock Settings": {
+    "Apps Dock Settings": ""
+  },
   "Apps Icon": {
     "Apps Icon": "应用图标"
   },
@@ -367,6 +379,32 @@
   },
   "Audio Visualizer": {
     "Audio Visualizer": "音频可视化"
+  },
+  "Audio device rename dialog field label": {
+    "Custom Name": ""
+  },
+  "Audio device rename dialog hint": {
+    "Press Enter and the audio system will restart to apply the change": ""
+  },
+  "Audio device rename dialog placeholder": {
+    "Enter device name...": ""
+  },
+  "Audio device rename dialog title": {
+    "Set Custom Device Name": ""
+  },
+  "Audio settings description": {
+    "Set custom names for your audio input devices": "",
+    "Set custom names for your audio output devices": ""
+  },
+  "Audio settings empty state": {
+    "No input devices found": "",
+    "No output devices found": ""
+  },
+  "Audio settings: speaker/headphone devices": {
+    "Output Devices": ""
+  },
+  "Audio system restarted": {
+    "Audio system restarted": ""
   },
   "Audio volume control": {
     "Audio volume control": "音量控制"
@@ -623,6 +661,9 @@
   "Browse or search plugins": {
     "Browse or search plugins": "浏览或搜索插件"
   },
+  "Button Color": {
+    "Button Color": ""
+  },
   "CPU": {
     "CPU": "CPU"
   },
@@ -875,6 +916,9 @@
   "Color displayed on monitors without the lock screen": {
     "Color displayed on monitors without the lock screen": "未显示锁屏的显示器上显示的颜色"
   },
+  "Color for primary action buttons": {
+    "Color for primary action buttons": ""
+  },
   "Color temperature for day time": {
     "Color temperature for day time": "白天模式色温"
   },
@@ -889,6 +933,9 @@
   },
   "Colorful mix of bright contrasting accents.": {
     "Colorful mix of bright contrasting accents.": "色彩鲜明、对比强烈的配色。"
+  },
+  "Colorize Active": {
+    "Colorize Active": ""
   },
   "Column": {
     "Column": "列"
@@ -1047,7 +1094,7 @@
     "Copy Full Command": "复制完整命令"
   },
   "Copy HTML": {
-    "Copy HTML": ""
+    "Copy HTML": "复制 HTML"
   },
   "Copy Name": {
     "Copy Name": "复制名称"
@@ -1059,13 +1106,13 @@
     "Copy Process Name": "复制进程名"
   },
   "Copy Text": {
-    "Copy Text": ""
+    "Copy Text": "复制文本"
   },
   "Copy URL": {
-    "Copy URL": ""
+    "Copy URL": "复制 URL"
   },
   "Copy path": {
-    "Copy path": ""
+    "Copy path": "复制路径"
   },
   "Corner Radius": {
     "Corner Radius": "圆角半径"
@@ -1322,6 +1369,9 @@
   "Device connections": {
     "Device connections": "设备连接"
   },
+  "Device names updated": {
+    "Device names updated": ""
+  },
   "Device paired": {
     "Device paired": "设备已配对"
   },
@@ -1472,8 +1522,14 @@
   "Door Open": {
     "Door Open": "打印机维护口已打开"
   },
+  "Drag to Reorder": {
+    "Drag to Reorder": ""
+  },
   "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.": {
     "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.": "拖动部件以在各区块内重新排序。点击眼睛图标可隐藏/显示部件（保留间距），点击 X 可彻底移除。"
+  },
+  "Drag workspace indicators to reorder them": {
+    "Drag workspace indicators to reorder them": ""
   },
   "Driver": {
     "Driver": "驱动程序"
@@ -1582,6 +1638,12 @@
   },
   "End": {
     "End": "结束"
+  },
+  "Enlarge on Hover": {
+    "Enlarge on Hover": ""
+  },
+  "Enlargement %": {
+    "Enlargement %": ""
   },
   "Enter 6-digit passkey": {
     "Enter 6-digit passkey": "输入六位数密钥"
@@ -1781,11 +1843,17 @@
   "Failed to remove printer from class": {
     "Failed to remove printer from class": "从类别中移除打印机失败"
   },
+  "Failed to restart audio system": {
+    "Failed to restart audio system": ""
+  },
   "Failed to restart job": {
     "Failed to restart job": "重新启动任务失败"
   },
   "Failed to resume printer": {
     "Failed to resume printer": "无法恢复打印机"
+  },
+  "Failed to save audio config": {
+    "Failed to save audio config": ""
   },
   "Failed to save clipboard setting": {
     "Failed to save clipboard setting": "无法保存剪切板设置"
@@ -2064,7 +2132,7 @@
     "HSV": "色相、饱和度、明度"
   },
   "HTML copied to clipboard": {
-    "HTML copied to clipboard": ""
+    "HTML copied to clipboard": "HTML 已复制到剪切板"
   },
   "Health": {
     "Health": "电池健康"
@@ -2104,6 +2172,9 @@
   },
   "Hide Delay": {
     "Hide Delay": "隐藏延迟"
+  },
+  "Hide Indicators": {
+    "Hide Indicators": ""
   },
   "Hide When Typing": {
     "Hide When Typing": "打字时隐藏"
@@ -2192,6 +2263,9 @@
   "Icon Size": {
     "Icon Size": "图标大小"
   },
+  "Icon Size %": {
+    "Icon Size %": ""
+  },
   "Icon Theme": {
     "Icon Theme": "图标主题"
   },
@@ -2248,6 +2322,9 @@
   },
   "Inherit": {
     "Inherit": "继承"
+  },
+  "Inhibitable": {
+    "Inhibitable": ""
   },
   "Input Devices": {
     "Input Devices": "输入设备"
@@ -2602,6 +2679,12 @@
   "Loading keybinds...": {
     "Loading keybinds...": "正在加载按键绑定..."
   },
+  "Loading overlay subtitle": {
+    "This may take a few seconds": ""
+  },
+  "Loading overlay while WirePlumber restarts": {
+    "Restarting audio system...": ""
+  },
   "Loading plugins...": {
     "Loading plugins...": "正在加载插件…..."
   },
@@ -2862,6 +2945,9 @@
   },
   "Modal Background": {
     "Modal Background": "模态背景"
+  },
+  "Modals": {
+    "Modals": ""
   },
   "Mode": {
     "Mode": "模式"
@@ -3259,6 +3345,9 @@
   "Open Notepad File": {
     "Open Notepad File": "打开便签"
   },
+  "Open a new note": {
+    "Open a new note": ""
+  },
   "Open folder": {
     "Open folder": ""
   },
@@ -3447,6 +3536,9 @@
   "Phone Connect ping action": {
     "Ping sent to": ""
   },
+  "Phone Connect refresh tooltip": {
+    "Refresh": ""
+  },
   "Phone Connect service unavailable message": {
     "Phone Connect unavailable": ""
   },
@@ -3521,6 +3613,9 @@
   },
   "Pointer": {
     "Pointer": "指示器"
+  },
+  "Popouts": {
+    "Popouts": ""
   },
   "Popup Position": {
     "Popup Position": "弹出位置"
@@ -3768,6 +3863,9 @@
   "Reset Size": {
     "Reset Size": "重置尺寸"
   },
+  "Reset to default name": {
+    "Reset to default name": ""
+  },
   "Resize Widget": {
     "Resize Widget": "调整部件大小"
   },
@@ -3852,6 +3950,12 @@
   "Running Apps Settings": {
     "Running Apps Settings": "活动应用设置"
   },
+  "Running apps filter: only show apps from the active workspace": {
+    "Current Workspace": ""
+  },
+  "Running apps filter: only show apps from the same monitor": {
+    "Current Monitor": ""
+  },
   "SDR Brightness": {
     "SDR Brightness": "SDR亮度"
   },
@@ -3875,6 +3979,9 @@
   },
   "Saved Configurations": {
     "Saved Configurations": "已保存的配置"
+  },
+  "Saved Note": {
+    "Saved Note": ""
   },
   "Saved item deleted": {
     "Saved item deleted": "保存项目已删除"
@@ -4050,6 +4157,9 @@
   "Server": {
     "Server": "服务器"
   },
+  "Set custom name": {
+    "Set custom name": ""
+  },
   "Set different wallpapers for each connected monitor": {
     "Set different wallpapers for each connected monitor": "分别为各个显示器设置壁纸"
   },
@@ -4185,6 +4295,9 @@
   "Show Restart DMS": {
     "Show Restart DMS": "显示重启 DMS"
   },
+  "Show Saved Items": {
+    "Show Saved Items": ""
+  },
   "Show Seconds": {
     "Show Seconds": "显示秒数"
   },
@@ -4296,6 +4409,9 @@
   "Shows current workspace and allows switching": {
     "Shows current workspace and allows switching": "显示当前工作区并支持快速切换"
   },
+  "Shows the original device name before renaming": {
+    "Original: %1": ""
+  },
   "Shows when caps lock is active": {
     "Shows when caps lock is active": "大写锁定时显示"
   },
@@ -4322,6 +4438,9 @@
   },
   "Sizing": {
     "Sizing": "大小调整"
+  },
+  "Skip confirmation": {
+    "Skip confirmation": ""
   },
   "Small": {
     "Small": ""
@@ -4938,6 +5057,9 @@
   "Visibility": {
     "Visibility": "能见度"
   },
+  "Visual Effects": {
+    "Visual Effects": ""
+  },
   "Visual divider between widgets": {
     "Visual divider between widgets": "部件分隔线"
   },
@@ -4985,6 +5107,9 @@
   },
   "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": {
     "When enabled, apps are sorted alphabetically. When disabled, apps are sorted by usage frequency.": "启用后，应用按字母顺序排序；禁用则按使用频率排序"
+  },
+  "When locked": {
+    "When locked": ""
   },
   "When updater widget is used, then hide it if no update found": {
     "Hide Updater Widget": "隐藏更新器部件",
@@ -5198,6 +5323,16 @@
   "browse themes button | theme browser header | theme browser window title": {
     "Browse Themes": "浏览主题"
   },
+  "button color option | color option | primary color | tile color option": {
+    "Primary": ""
+  },
+  "button color option | color option | secondary color | tile color option": {
+    "Secondary": ""
+  },
+  "button color option | tile color option": {
+    "Primary Container": "",
+    "Surface Variant": ""
+  },
   "catppuccin theme description": {
     "Soothing pastel theme based on Catppuccin": "基于Catppuccin的舒缓且柔和的主题"
   },
@@ -5318,6 +5453,9 @@
   },
   "fallback gpu name": {
     "Unknown GPU": "未知的GPU"
+  },
+  "featured": {
+    "featured": ""
   },
   "files": {
     "files": "文件"
@@ -5561,6 +5699,7 @@
     "nav": ""
   },
   "network status": {
+    "Connected": "",
     "Disabling WiFi...": "",
     "Enabling WiFi...": "",
     "Ethernet": "",
@@ -5817,7 +5956,7 @@
     "Wipe": ""
   },
   "weather feels like temperature": {
-    "Feels Like %1°": ""
+    "Feels Like %1°": "体感 %1°"
   },
   "widget style option": {
     "Colorful": "",
