feat: add osd toggles to search index (#1652)
* feat: add osd toggles to search index
this commit also regenerates the search index

* add newline at end of translations file

* ran prek to fix the file :)

--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -752,6 +752,21 @@
     "icon": "vertical_align_center"
   },
   {
+    "section": "barShadow",
+    "label": "Shadow",
+    "tabIndex": 3,
+    "category": "Dank Bar",
+    "keywords": [
+      "bar",
+      "dank",
+      "panel",
+      "shadow",
+      "statusbar",
+      "topbar"
+    ],
+    "icon": "layers"
+  },
+  {
     "section": "barSpacing",
     "label": "Spacing",
     "tabIndex": 3,
@@ -3815,31 +3830,24 @@
     "description": "If the field is hidden, it will appear as soon as a key is pressed."
   },
   {
-    "section": "lockScreenNotificationMode",
-    "label": "Notification Display",
+    "section": "lockAtStartup",
+    "label": "Lock at startup",
     "tabIndex": 11,
     "category": "Lock Screen",
     "keywords": [
-      "alert",
-      "control",
-      "display",
-      "information",
+      "automatic",
+      "automatically",
+      "boot",
       "lock",
-      "lockscreen",
       "login",
-      "monitor",
-      "notif",
-      "notification",
-      "notifications",
-      "output",
       "password",
-      "privacy",
       "screen",
       "security",
-      "shown",
-      "what"
+      "start",
+      "starts",
+      "startup"
     ],
-    "description": "Control what notification information is shown on the lock screen"
+    "description": "Automatically lock the screen when DMS starts"
   },
   {
     "section": "_tab_11",
@@ -4075,6 +4083,7 @@
       "motion",
       "popout",
       "speed",
+      "sync",
       "text",
       "transition",
       "typography"
@@ -4097,12 +4106,36 @@
       "modal",
       "motion",
       "speed",
+      "sync",
       "text",
       "transition",
       "typography"
     ],
     "icon": "web_asset",
     "description": "%1 custom animation duration"
+  },
+  {
+    "section": "customAnimationDuration",
+    "label": "Animation Duration",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "custom",
+      "duration",
+      "durations",
+      "fonts",
+      "globally",
+      "motion",
+      "scale",
+      "speed",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "description": "Globally scale all animation durations"
   },
   {
     "section": "animationSpeed",
@@ -4114,43 +4147,18 @@
       "animation",
       "animations",
       "duration",
-      "fine",
+      "durations",
       "fonts",
-      "milliseconds",
+      "globally",
       "motion",
+      "scale",
       "speed",
       "text",
-      "timing",
       "transition",
-      "tune",
       "typography"
     ],
     "icon": "animation",
-    "description": "Fine-tune animation timing in milliseconds"
-  },
-  {
-    "section": "customAnimationDuration",
-    "label": "Custom Duration",
-    "tabIndex": 14,
-    "category": "Typography & Motion",
-    "keywords": [
-      "animate",
-      "animation",
-      "animations",
-      "custom",
-      "duration",
-      "fine",
-      "fonts",
-      "milliseconds",
-      "motion",
-      "speed",
-      "text",
-      "timing",
-      "transition",
-      "tune",
-      "typography"
-    ],
-    "description": "Fine-tune animation timing in milliseconds"
+    "description": "Globally scale all animation durations"
   },
   {
     "section": "popoutCustomAnimationDuration",
@@ -4280,6 +4288,59 @@
       "typography"
     ],
     "description": "Select the font family for UI text"
+  },
+  {
+    "section": "enableRippleEffects",
+    "label": "Ripple Effects",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "design",
+      "effect",
+      "effects",
+      "elements",
+      "feedback",
+      "fonts",
+      "interactive",
+      "material",
+      "motion",
+      "ripple",
+      "show",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "icon": "radio_button_unchecked",
+    "description": "Show Material Design ripple animations on interactive elements"
+  },
+  {
+    "section": "syncComponentAnimationSpeeds",
+    "label": "Sync Popouts & Modals",
+    "tabIndex": 14,
+    "category": "Typography & Motion",
+    "keywords": [
+      "animate",
+      "animation",
+      "animations",
+      "customize",
+      "follow",
+      "fonts",
+      "global",
+      "modal",
+      "modals",
+      "motion",
+      "popout",
+      "popouts",
+      "speed",
+      "sync",
+      "text",
+      "transition",
+      "typography"
+    ],
+    "description": "Popouts and Modals follow global Animation Speed (disable to customize independently)"
   },
   {
     "section": "typography",
@@ -4835,6 +4896,35 @@
     "description": "Timeout for normal priority notifications"
   },
   {
+    "section": "lockScreenNotificationMode",
+    "label": "Notification Display",
+    "tabIndex": 17,
+    "category": "Notifications",
+    "keywords": [
+      "alert",
+      "alerts",
+      "control",
+      "display",
+      "information",
+      "lock",
+      "lockscreen",
+      "login",
+      "messages",
+      "monitor",
+      "notif",
+      "notification",
+      "notifications",
+      "output",
+      "privacy",
+      "screen",
+      "security",
+      "shown",
+      "toast",
+      "what"
+    ],
+    "description": "Control what notification information is shown on the lock screen"
+  },
+  {
     "section": "notificationOverlayEnabled",
     "label": "Notification Overlay",
     "tabIndex": 17,
@@ -4949,6 +5039,230 @@
     "description": "Choose where notification popups appear on screen"
   },
   {
+    "section": "osdAlwaysShowValue",
+    "label": "Always Show Percentage",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "always",
+      "audio",
+      "backlight",
+      "bright",
+      "brightness",
+      "dim",
+      "display",
+      "displays",
+      "indicator",
+      "loudness",
+      "monitor",
+      "osd",
+      "output",
+      "percentage",
+      "popup",
+      "popups",
+      "screen",
+      "show",
+      "sound",
+      "speaker",
+      "values",
+      "volume"
+    ],
+    "description": "Display volume and brightness percentage values in OSD popups"
+  },
+  {
+    "section": "osdAudioOutputEnabled",
+    "label": "Audio Output Switch",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "audio",
+      "cycling",
+      "devices",
+      "display",
+      "displays",
+      "indicator",
+      "monitor",
+      "osd",
+      "output",
+      "popup",
+      "screen",
+      "show",
+      "switch"
+    ],
+    "description": "Show on-screen display when cycling audio output devices"
+  },
+  {
+    "section": "osdBrightnessEnabled",
+    "label": "Brightness",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "backlight",
+      "bright",
+      "brightness",
+      "changes",
+      "dim",
+      "display",
+      "displays",
+      "indicator",
+      "monitor",
+      "osd",
+      "output",
+      "popup",
+      "screen",
+      "show"
+    ],
+    "description": "Show on-screen display when brightness changes"
+  },
+  {
+    "section": "osdCapsLockEnabled",
+    "label": "Caps Lock",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "caps",
+      "changes",
+      "display",
+      "displays",
+      "indicator",
+      "lock",
+      "monitor",
+      "osd",
+      "output",
+      "popup",
+      "screen",
+      "show",
+      "state"
+    ],
+    "description": "Show on-screen display when caps lock state changes"
+  },
+  {
+    "section": "osdIdleInhibitorEnabled",
+    "label": "Idle Inhibitor",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "afk",
+      "changes",
+      "display",
+      "displays",
+      "idle",
+      "inactive",
+      "indicator",
+      "inhibitor",
+      "monitor",
+      "osd",
+      "output",
+      "popup",
+      "screen",
+      "screensaver",
+      "show",
+      "state",
+      "timeout"
+    ],
+    "description": "Show on-screen display when idle inhibitor state changes"
+  },
+  {
+    "section": "osdMediaPlaybackEnabled",
+    "label": "Media Playback",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "audio",
+      "changes",
+      "display",
+      "displays",
+      "indicator",
+      "media",
+      "monitor",
+      "mpris",
+      "music",
+      "osd",
+      "output",
+      "playback",
+      "player",
+      "popup",
+      "screen",
+      "show",
+      "status"
+    ],
+    "description": "Show on-screen display when media player status changes"
+  },
+  {
+    "section": "osdMediaVolumeEnabled",
+    "label": "Media Volume",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "audio",
+      "changes",
+      "display",
+      "displays",
+      "indicator",
+      "loudness",
+      "media",
+      "monitor",
+      "mpris",
+      "music",
+      "osd",
+      "output",
+      "playback",
+      "player",
+      "popup",
+      "screen",
+      "show",
+      "sound",
+      "speaker",
+      "volume"
+    ],
+    "description": "Show on-screen display when media player volume changes"
+  },
+  {
+    "section": "osdMicMuteEnabled",
+    "label": "Microphone Mute",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "display",
+      "displays",
+      "indicator",
+      "microphone",
+      "monitor",
+      "mute",
+      "muted",
+      "osd",
+      "output",
+      "popup",
+      "screen",
+      "show",
+      "unmuted"
+    ],
+    "description": "Show on-screen display when microphone is muted/unmuted"
+  },
+  {
+    "section": "osdPosition",
+    "label": "OSD Position",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "appear",
+      "choose",
+      "displays",
+      "indicator",
+      "monitor",
+      "monitors",
+      "osd",
+      "output",
+      "outputs",
+      "popup",
+      "position",
+      "screen",
+      "screens",
+      "where"
+    ],
+    "description": "Choose where on-screen displays appear on screen"
+  },
+  {
     "section": "_tab_18",
     "label": "On-screen Displays",
     "tabIndex": 18,
@@ -4989,6 +5303,57 @@
     ],
     "icon": "tune",
     "description": "Choose where on-screen displays appear on screen"
+  },
+  {
+    "section": "osdPowerProfileEnabled",
+    "label": "Power Profile",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "changes",
+      "display",
+      "displays",
+      "hibernate",
+      "indicator",
+      "monitor",
+      "osd",
+      "output",
+      "popup",
+      "power",
+      "profile",
+      "reboot",
+      "restart",
+      "screen",
+      "show",
+      "shutdown",
+      "sleep",
+      "suspend"
+    ],
+    "description": "Show on-screen display when power profile changes"
+  },
+  {
+    "section": "osdVolumeEnabled",
+    "label": "Volume",
+    "tabIndex": 18,
+    "category": "On-screen Displays",
+    "keywords": [
+      "audio",
+      "changes",
+      "display",
+      "displays",
+      "indicator",
+      "loudness",
+      "monitor",
+      "osd",
+      "output",
+      "popup",
+      "screen",
+      "show",
+      "sound",
+      "speaker",
+      "volume"
+    ],
+    "description": "Show on-screen display when volume changes"
   },
   {
     "section": "appIdSubstitutions",
